OPENJPA-1868: Miscellaneous FindBugs suggested performance improvements for openjpa-kernel.
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@1030139 13f79535-47bb-0310-9956-ffa450edef68